parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BIT_AND
    BIT_NOT
    BIT_OR
    BIT_XOR
    BYTE
    CLASS
    COLON
    COMMENT
    DECREMENT
    DIVIDE_ASSIGN
    INCREMENT
    LONG
    LSHIFT
    MOD_ASSIGN
    MULTILINE_COMMENT
    QUESTION
    RETURN
    RSHIFT
    SHORT
    TIMES_ASSIGN

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> var_declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> for_statement
Rule 9     statement -> method_declaration
Rule 10    statement -> print_statement
Rule 11    var_declaration -> type IDENTIFIER ASSIGN expression SEMICOLON
Rule 12    var_declaration -> type IDENTIFIER SEMICOLON
Rule 13    type -> INT
Rule 14    type -> FLOAT
Rule 15    type -> DOUBLE
Rule 16    type -> BOOLEAN
Rule 17    type -> CHAR
Rule 18    type -> IDENTIFIER
Rule 19    var_declaration -> type LBRACKET RBRACKET IDENTIFIER ASSIGN IDENTIFIER type LBRACKET expression RBRACKET SEMICOLON
Rule 20    var_declaration -> type LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE expression_list RBRACE SEMICOLON
Rule 21    assignment -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 22    assignment -> IDENTIFIER PLUS_ASSIGN expression SEMICOLON
Rule 23    assignment -> IDENTIFIER MINUS_ASSIGN expression SEMICOLON
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression TIMES expression
Rule 27    expression -> expression DIVIDE expression
Rule 28    expression -> expression MOD expression
Rule 29    expression -> expression EQ expression
Rule 30    expression -> expression NE expression
Rule 31    expression -> expression LT expression
Rule 32    expression -> expression GT expression
Rule 33    expression -> expression LE expression
Rule 34    expression -> expression GE expression
Rule 35    expression -> expression AND expression
Rule 36    expression -> expression OR expression
Rule 37    expression -> LPAREN expression RPAREN
Rule 38    expression -> NOT expression
Rule 39    expression -> MINUS expression
Rule 40    expression -> INTEGER_LITERAL
Rule 41    expression -> FLOAT_LITERAL
Rule 42    expression -> STRING_LITERAL
Rule 43    expression -> BOOLEAN_LITERAL
Rule 44    expression -> CHAR_LITERAL
Rule 45    expression -> IDENTIFIER
Rule 46    expression_list -> expression_list COMMA expression
Rule 47    expression_list -> expression
Rule 48    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 49    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 50    while_statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 51    for_statement -> FOR LPAREN var_declaration expression SEMICOLON assignment_no_semi RPAREN LBRACE statements RBRACE
Rule 52    assignment_no_semi -> IDENTIFIER ASSIGN expression
Rule 53    method_declaration -> modifier type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 54    modifier -> PUBLIC
Rule 55    modifier -> PRIVATE
Rule 56    modifier -> empty
Rule 57    parameters -> parameters COMMA type IDENTIFIER
Rule 58    parameters -> type IDENTIFIER
Rule 59    parameters -> empty
Rule 60    print_statement -> IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 35
ASSIGN               : 11 19 20 21 52
BIT_AND              : 
BIT_NOT              : 
BIT_OR               : 
BIT_XOR              : 
BOOLEAN              : 16
BOOLEAN_LITERAL      : 43
BYTE                 : 
CHAR                 : 17
CHAR_LITERAL         : 44
CLASS                : 
COLON                : 
COMMA                : 46 57
COMMENT              : 
DECREMENT            : 
DIVIDE               : 27
DIVIDE_ASSIGN        : 
DOT                  : 60 60
DOUBLE               : 15
ELSE                 : 49
EQ                   : 29
FLOAT                : 14
FLOAT_LITERAL        : 41
FOR                  : 51
GE                   : 34
GT                   : 32
IDENTIFIER           : 11 12 18 19 19 20 21 22 23 45 52 53 57 58 60 60 60
IF                   : 48 49
INCREMENT            : 
INT                  : 13
INTEGER_LITERAL      : 40
LBRACE               : 20 48 49 49 50 51 53
LBRACKET             : 19 19 20
LE                   : 33
LONG                 : 
LPAREN               : 37 48 49 50 51 53 60
LSHIFT               : 
LT                   : 31
MINUS                : 25 39
MINUS_ASSIGN         : 23
MOD                  : 28
MOD_ASSIGN           : 
MULTILINE_COMMENT    : 
NE                   : 30
NOT                  : 38
OR                   : 36
PLUS                 : 24
PLUS_ASSIGN          : 22
PRIVATE              : 55
PUBLIC               : 54
QUESTION             : 
RBRACE               : 20 48 49 49 50 51 53
RBRACKET             : 19 19 20
RETURN               : 
RPAREN               : 37 48 49 50 51 53 60
RSHIFT               : 
SEMICOLON            : 11 12 19 20 21 22 23 51 60
SHORT                : 
STRING_LITERAL       : 42
TIMES                : 26
TIMES_ASSIGN         : 
WHILE                : 50
error                : 

Nonterminals, with rules where they appear

assignment           : 5
assignment_no_semi   : 51
empty                : 56 59
expression           : 11 19 21 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 38 39 46 47 48 49 50 51 52 60
expression_list      : 20 46
for_statement        : 8
if_statement         : 6
method_declaration   : 9
modifier             : 53
parameters           : 53 57
print_statement      : 10
program              : 0
statement            : 2 3
statements           : 1 2 48 49 49 50 51 53
type                 : 11 12 19 19 20 53 57 58
var_declaration      : 4 51
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . var_declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . method_declaration
    (10) statement -> . print_statement
    (11) var_declaration -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (12) var_declaration -> . type IDENTIFIER SEMICOLON
    (19) var_declaration -> . type LBRACKET RBRACKET IDENTIFIER ASSIGN IDENTIFIER type LBRACKET expression RBRACKET SEMICOLON
    (20) var_declaration -> . type LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE expression_list RBRACE SEMICOLON
    (21) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (22) assignment -> . IDENTIFIER PLUS_ASSIGN expression SEMICOLON
    (23) assignment -> . IDENTIFIER MINUS_ASSIGN expression SEMICOLON
    (48) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (49) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (50) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (51) for_statement -> . FOR LPAREN var_declaration expression SEMICOLON assignment_no_semi RPAREN LBRACE statements RBRACE
    (53) method_declaration -> . modifier type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (60) print_statement -> . IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . DOUBLE
    (16) type -> . BOOLEAN
    (17) type -> . CHAR
    (18) type -> . IDENTIFIER
    (54) modifier -> . PUBLIC
    (55) modifier -> . PRIVATE
    (56) modifier -> . empty
    (61) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DOUBLE          shift and go to state 19
    BOOLEAN         shift and go to state 20
    CHAR            shift and go to state 21
    PUBLIC          shift and go to state 22
    PRIVATE         shift and go to state 23

  ! INT             [ reduce using rule 61 (empty -> .) ]
  ! FLOAT           [ reduce using rule 61 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 61 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 61 (empty -> .) ]
  ! CHAR            [ reduce using rule 61 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 61 (empty -> .) ]

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    var_declaration                shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    method_declaration             shift and go to state 9
    print_statement                shift and go to state 10
    type                           shift and go to state 11
    modifier                       shift and go to state 16
    empty                          shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . var_declaration
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . method_declaration
    (10) statement -> . print_statement
    (11) var_declaration -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (12) var_declaration -> . type IDENTIFIER SEMICOLON
    (19) var_declaration -> . type LBRACKET RBRACKET IDENTIFIER ASSIGN IDENTIFIER type LBRACKET expression RBRACKET SEMICOLON
    (20) var_declaration -> . type LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE expression_list RBRACE SEMICOLON
    (21) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (22) assignment -> . IDENTIFIER PLUS_ASSIGN expression SEMICOLON
    (23) assignment -> . IDENTIFIER MINUS_ASSIGN expression SEMICOLON
    (48) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (49) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (50) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (51) for_statement -> . FOR LPAREN var_declaration expression SEMICOLON assignment_no_semi RPAREN LBRACE statements RBRACE
    (53) method_declaration -> . modifier type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (60) print_statement -> . IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . DOUBLE
    (16) type -> . BOOLEAN
    (17) type -> . CHAR
    (18) type -> . IDENTIFIER
    (54) modifier -> . PUBLIC
    (55) modifier -> . PRIVATE
    (56) modifier -> . empty
    (61) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    $end            reduce using rule 1 (program -> statements .)
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DOUBLE          shift and go to state 19
    BOOLEAN         shift and go to state 20
    CHAR            shift and go to state 21
    PUBLIC          shift and go to state 22
    PRIVATE         shift and go to state 23

  ! INT             [ reduce using rule 61 (empty -> .) ]
  ! FLOAT           [ reduce using rule 61 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 61 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 61 (empty -> .) ]
  ! CHAR            [ reduce using rule 61 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 61 (empty -> .) ]

    statement                      shift and go to state 25
    var_declaration                shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    method_declaration             shift and go to state 9
    print_statement                shift and go to state 10
    type                           shift and go to state 11
    modifier                       shift and go to state 16
    empty                          shift and go to state 24

state 3

    (3) statements -> statement .

    IDENTIFIER      reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    INT             reduce using rule 3 (statements -> statement .)
    FLOAT           reduce using rule 3 (statements -> statement .)
    DOUBLE          reduce using rule 3 (statements -> statement .)
    BOOLEAN         reduce using rule 3 (statements -> statement .)
    CHAR            reduce using rule 3 (statements -> statement .)
    PUBLIC          reduce using rule 3 (statements -> statement .)
    PRIVATE         reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> var_declaration .

    IDENTIFIER      reduce using rule 4 (statement -> var_declaration .)
    IF              reduce using rule 4 (statement -> var_declaration .)
    WHILE           reduce using rule 4 (statement -> var_declaration .)
    FOR             reduce using rule 4 (statement -> var_declaration .)
    INT             reduce using rule 4 (statement -> var_declaration .)
    FLOAT           reduce using rule 4 (statement -> var_declaration .)
    DOUBLE          reduce using rule 4 (statement -> var_declaration .)
    BOOLEAN         reduce using rule 4 (statement -> var_declaration .)
    CHAR            reduce using rule 4 (statement -> var_declaration .)
    PUBLIC          reduce using rule 4 (statement -> var_declaration .)
    PRIVATE         reduce using rule 4 (statement -> var_declaration .)
    $end            reduce using rule 4 (statement -> var_declaration .)
    RBRACE          reduce using rule 4 (statement -> var_declaration .)


state 5

    (5) statement -> assignment .

    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    INT             reduce using rule 5 (statement -> assignment .)
    FLOAT           reduce using rule 5 (statement -> assignment .)
    DOUBLE          reduce using rule 5 (statement -> assignment .)
    BOOLEAN         reduce using rule 5 (statement -> assignment .)
    CHAR            reduce using rule 5 (statement -> assignment .)
    PUBLIC          reduce using rule 5 (statement -> assignment .)
    PRIVATE         reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_statement .

    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    INT             reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    DOUBLE          reduce using rule 6 (statement -> if_statement .)
    BOOLEAN         reduce using rule 6 (statement -> if_statement .)
    CHAR            reduce using rule 6 (statement -> if_statement .)
    PUBLIC          reduce using rule 6 (statement -> if_statement .)
    PRIVATE         reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    IDENTIFIER      reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    FOR             reduce using rule 7 (statement -> while_statement .)
    INT             reduce using rule 7 (statement -> while_statement .)
    FLOAT           reduce using rule 7 (statement -> while_statement .)
    DOUBLE          reduce using rule 7 (statement -> while_statement .)
    BOOLEAN         reduce using rule 7 (statement -> while_statement .)
    CHAR            reduce using rule 7 (statement -> while_statement .)
    PUBLIC          reduce using rule 7 (statement -> while_statement .)
    PRIVATE         reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> for_statement .

    IDENTIFIER      reduce using rule 8 (statement -> for_statement .)
    IF              reduce using rule 8 (statement -> for_statement .)
    WHILE           reduce using rule 8 (statement -> for_statement .)
    FOR             reduce using rule 8 (statement -> for_statement .)
    INT             reduce using rule 8 (statement -> for_statement .)
    FLOAT           reduce using rule 8 (statement -> for_statement .)
    DOUBLE          reduce using rule 8 (statement -> for_statement .)
    BOOLEAN         reduce using rule 8 (statement -> for_statement .)
    CHAR            reduce using rule 8 (statement -> for_statement .)
    PUBLIC          reduce using rule 8 (statement -> for_statement .)
    PRIVATE         reduce using rule 8 (statement -> for_statement .)
    $end            reduce using rule 8 (statement -> for_statement .)
    RBRACE          reduce using rule 8 (statement -> for_statement .)


state 9

    (9) statement -> method_declaration .

    IDENTIFIER      reduce using rule 9 (statement -> method_declaration .)
    IF              reduce using rule 9 (statement -> method_declaration .)
    WHILE           reduce using rule 9 (statement -> method_declaration .)
    FOR             reduce using rule 9 (statement -> method_declaration .)
    INT             reduce using rule 9 (statement -> method_declaration .)
    FLOAT           reduce using rule 9 (statement -> method_declaration .)
    DOUBLE          reduce using rule 9 (statement -> method_declaration .)
    BOOLEAN         reduce using rule 9 (statement -> method_declaration .)
    CHAR            reduce using rule 9 (statement -> method_declaration .)
    PUBLIC          reduce using rule 9 (statement -> method_declaration .)
    PRIVATE         reduce using rule 9 (statement -> method_declaration .)
    $end            reduce using rule 9 (statement -> method_declaration .)
    RBRACE          reduce using rule 9 (statement -> method_declaration .)


state 10

    (10) statement -> print_statement .

    IDENTIFIER      reduce using rule 10 (statement -> print_statement .)
    IF              reduce using rule 10 (statement -> print_statement .)
    WHILE           reduce using rule 10 (statement -> print_statement .)
    FOR             reduce using rule 10 (statement -> print_statement .)
    INT             reduce using rule 10 (statement -> print_statement .)
    FLOAT           reduce using rule 10 (statement -> print_statement .)
    DOUBLE          reduce using rule 10 (statement -> print_statement .)
    BOOLEAN         reduce using rule 10 (statement -> print_statement .)
    CHAR            reduce using rule 10 (statement -> print_statement .)
    PUBLIC          reduce using rule 10 (statement -> print_statement .)
    PRIVATE         reduce using rule 10 (statement -> print_statement .)
    $end            reduce using rule 10 (statement -> print_statement .)
    RBRACE          reduce using rule 10 (statement -> print_statement .)


state 11

    (11) var_declaration -> type . IDENTIFIER ASSIGN expression SEMICOLON
    (12) var_declaration -> type . IDENTIFIER SEMICOLON
    (19) var_declaration -> type . LBRACKET RBRACKET IDENTIFIER ASSIGN IDENTIFIER type LBRACKET expression RBRACKET SEMICOLON
    (20) var_declaration -> type . LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE expression_list RBRACE SEMICOLON

    IDENTIFIER      shift and go to state 26
    LBRACKET        shift and go to state 27


state 12

    (21) assignment -> IDENTIFIER . ASSIGN expression SEMICOLON
    (22) assignment -> IDENTIFIER . PLUS_ASSIGN expression SEMICOLON
    (23) assignment -> IDENTIFIER . MINUS_ASSIGN expression SEMICOLON
    (60) print_statement -> IDENTIFIER . DOT IDENTIFIER DOT IDENTIFIER LPAREN expression RPAREN SEMICOLON
    (18) type -> IDENTIFIER .

    ASSIGN          shift and go to state 28
    PLUS_ASSIGN     shift and go to state 29
    MINUS_ASSIGN    shift and go to state 30
    DOT             shift and go to state 31
    IDENTIFIER      reduce using rule 18 (type -> IDENTIFIER .)
    LBRACKET        reduce using rule 18 (type -> IDENTIFIER .)


state 13

    (48) if_statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (49) if_statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 32


state 14

    (50) while_statement -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 33


state 15

    (51) for_statement -> FOR . LPAREN var_declaration expression SEMICOLON assignment_no_semi RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 34


state 16

    (53) method_declaration -> modifier . type IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . DOUBLE
    (16) type -> . BOOLEAN
    (17) type -> . CHAR
    (18) type -> . IDENTIFIER

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    DOUBLE          shift and go to state 19
    BOOLEAN         shift and go to state 20
    CHAR            shift and go to state 21
    IDENTIFIER      shift and go to state 36

    type                           shift and go to state 35

state 17

    (13) type -> INT .

    IDENTIFIER      reduce using rule 13 (type -> INT .)
    LBRACKET        reduce using rule 13 (type -> INT .)


state 18

    (14) type -> FLOAT .

    IDENTIFIER      reduce using rule 14 (type -> FLOAT .)
    LBRACKET        reduce using rule 14 (type -> FLOAT .)


state 19

    (15) type -> DOUBLE .

    IDENTIFIER      reduce using rule 15 (type -> DOUBLE .)
    LBRACKET        reduce using rule 15 (type -> DOUBLE .)


state 20

    (16) type -> BOOLEAN .

    IDENTIFIER      reduce using rule 16 (type -> BOOLEAN .)
    LBRACKET        reduce using rule 16 (type -> BOOLEAN .)


state 21

    (17) type -> CHAR .

    IDENTIFIER      reduce using rule 17 (type -> CHAR .)
    LBRACKET        reduce using rule 17 (type -> CHAR .)


state 22

    (54) modifier -> PUBLIC .

    INT             reduce using rule 54 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 54 (modifier -> PUBLIC .)
    DOUBLE          reduce using rule 54 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 54 (modifier -> PUBLIC .)
    CHAR            reduce using rule 54 (modifier -> PUBLIC .)
    IDENTIFIER      reduce using rule 54 (modifier -> PUBLIC .)


state 23

    (55) modifier -> PRIVATE .

    INT             reduce using rule 55 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 55 (modifier -> PRIVATE .)
    DOUBLE          reduce using rule 55 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 55 (modifier -> PRIVATE .)
    CHAR            reduce using rule 55 (modifier -> PRIVATE .)
    IDENTIFIER      reduce using rule 55 (modifier -> PRIVATE .)


state 24

    (56) modifier -> empty .

    INT             reduce using rule 56 (modifier -> empty .)
    FLOAT           reduce using rule 56 (modifier -> empty .)
    DOUBLE          reduce using rule 56 (modifier -> empty .)
    BOOLEAN         reduce using rule 56 (modifier -> empty .)
    CHAR            reduce using rule 56 (modifier -> empty .)
    IDENTIFIER      reduce using rule 56 (modifier -> empty .)


state 25

    (2) statements -> statements statement .

    IDENTIFIER      reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    INT             reduce using rule 2 (statements -> statements statement .)
    FLOAT           reduce using rule 2 (statements -> statements statement .)
    DOUBLE          reduce using rule 2 (statements -> statements statement .)
    BOOLEAN         reduce using rule 2 (statements -> statements statement .)
    CHAR            reduce using rule 2 (statements -> statements statement .)
    PUBLIC          reduce using rule 2 (statements -> statements statement .)
    PRIVATE         reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 26

    (11) var_declaration -> type IDENTIFIER . ASSIGN expression SEMICOLON
    (12) var_declaration -> type IDENTIFIER . SEMICOLON

    ASSIGN          shift and go to state 37
    SEMICOLON       shift and go to state 38


state 27

    (19) var_declaration -> type LBRACKET . RBRACKET IDENTIFIER ASSIGN IDENTIFIER type LBRACKET expression RBRACKET SEMICOLON
    (20) var_declaration -> type LBRACKET . RBRACKET IDENTIFIER ASSIGN LBRACE expression_list RBRACE SEMICOLON

    RBRACKET        shift and go to state 39


state 28
